--- a/daily.html
+++ b/daily.html
@@ -71,72 +71,72 @@ function drop(ev) {
 <div class="col-10">
 
 <p style="text-decoration:underline">Transport</p>
-<img id="drag19" src="png/car.png" alt="blah" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag3" src="png/bike.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag4" src="png/boat.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag44" src="png/swimming.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag45" src="png/taking off.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag46" src="png/taxi.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag47" src="png/train.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag48" src="png/tram.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag49" src="png/truck.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag51" src="png/walk.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag10" src="png/bus.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag26" src="png/motorbike.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag23" src="png/landing.png" alt="blah" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw"> 
-<img id="drag34" src="png/shuttle.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag35" src="png/rowing.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag36" src="png/run.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag12" src="png/child.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag52" src="png/wheelchair.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag19" src="car.png" alt="blah" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag3" src="bike.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag4" src="boat.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag44" src="swimming.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag45" src="taking off.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag46" src="taxi.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag47" src="train.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag48" src="tram.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag49" src="truck.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag51" src="walk.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag10" src="bus.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag26" src="motorbike.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag23" src="landing.png" alt="blah" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw"> 
+<img id="drag34" src="shuttle.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag35" src="rowing.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag36" src="run.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag12" src="child.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag52" src="wheelchair.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
 
 <p style="text-decoration:underline">Places</p>
-<img id="drag6" src="png/beach.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag2" src="png/bed.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag7" src="png/building.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag8" src="png/building4.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag9" src="png/building3.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag53" src="png/business.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag54" src="png/work.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag40" src="png/shopping.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag37" src="png/school.png" draggable="true" ondragstart="drag(event)" width="60vw" height="60vw" hspace="7vw">
-<img id="drag39" src="png/shop.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag30" src="png/nature.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag6" src="beach.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag2" src="bed.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag7" src="building.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag8" src="building4.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag9" src="building3.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag53" src="business.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag54" src="work.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag40" src="shopping.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag37" src="school.png" draggable="true" ondragstart="drag(event)" width="60vw" height="60vw" hspace="7vw">
+<img id="drag39" src="shop.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag30" src="nature.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
 
 <p style="text-decoration:underline">Actions/Hobbies</p>
-<img id="drag3" src="png/bike.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag44" src="png/swimming.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag51" src="png/walk.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag35" src="png/rowing.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag36" src="png/run.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag1" src="png/couch.png" draggable="true" ondragstart="drag(event)" width="60vw" height="60vw" hspace="7vw">
-<img id="drag38" src="png/seat.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag41" src="png/sofa.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag55" src="png/nothing.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag5" src="png/book.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag11" src="png/camera.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag13" src="png/clock.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag15" src="png/eat.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag16" src="png/explore.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag17" src="png/flower.png" alt="blah" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag18" src="png/gym.png" alt="blah" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag20" src="png/home.png" alt="blah" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag21" src="png/golf.png" alt="blah" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag22" src="png/drink.png" alt="blah" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag24" src="png/lightbulb.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag25" src="png/lightening.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag27" src="png/mountain.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag28" src="png/movie.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag29" src="png/music.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag31" src="png/paintbrush.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag32" src="png/pet.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag33" src="png/puzzle.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag50" src="png/tv.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag3" src="bike.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag44" src="swimming.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag51" src="walk.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag35" src="rowing.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag36" src="run.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag1" src="couch.png" draggable="true" ondragstart="drag(event)" width="60vw" height="60vw" hspace="7vw">
+<img id="drag38" src="seat.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag41" src="sofa.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag55" src="nothing.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag5" src="book.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag11" src="camera.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag13" src="clock.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag15" src="eat.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag16" src="explore.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag17" src="flower.png" alt="blah" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag18" src="gym.png" alt="blah" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag20" src="home.png" alt="blah" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag21" src="golf.png" alt="blah" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag22" src="drink.png" alt="blah" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag24" src="lightbulb.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag25" src="lightening.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag27" src="mountain.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag28" src="movie.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag29" src="music.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag31" src="paintbrush.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag32" src="pet.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag33" src="puzzle.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag50" src="tv.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
 
 
-<img id="drag42" src="png/snow.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag43" src="png/sun.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
-<img id="drag14" src="png/cloud.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag42" src="snow.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag43" src="sun.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
+<img id="drag14" src="cloud.png" draggable="true" ondragstart="drag(event)" width="auto" height="60vw" hspace="7vw">
   
   </div>
 
