--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
 
 
 <div class="col-12 menu">
-        <h1><a class="btn" href="index.html">  WEATHER</a></h1>
+        <h1><a class="btn" href="weather.html">  WEATHER</a></h1>
 
     
   
